--- a/Part2/index.html
+++ b/Part2/index.html
@@ -9,10 +9,16 @@
 <body>
   <header><h1>Poker Cards</h1></header>
     <main>
-        <section><span>A</span><span>♦</span><span>A</span></section>
-        <section><span>A</span><span>♣</span><span>A</span></section>
-        <section><span>A</span><span>♥</span><span>A</span></section>
-        <section><span>A</span><span>♠</span><span>A</span></section>
+        <input type="text" placeholder="add suit" id="cards">
+        <input type="text" placeholder="add color" id="style">
+        <button id="cardSet" onclick="setCard()">Set Card</button>
+        <section id="diamonds"><span>A</span><span>♦</span><span>A</span></section>
+        <section id="clubs"><span>A</span><span>♣</span><span>A</span></section>
+        <section id="hearts"><span>A</span><span>♥</span><span>A</span></section>
+        <section id="spades"><span>A</span><span>♠</span><span>A</span></section>
     </main>
+
+
+    <script src="script.js"></script>
 </body>
 </html>
